# denbot-rl

./: .gitignore  .gitmodules  README.md  boost_prox.py  dashboard.py  env_runner.py  go.mod  inference.css  inference.py  load_latest.py  main.go  makefile  plotly_dash.py  pyproject.toml  rl_viser_test.py  rlviser  run_inference.py  settings.txt  train.py
conf/: algorithm.py  build_config.py  callbacks.py  stoppers.py  train.yaml
conf/algorithm/: base.yaml  ppo.yaml
conf/exp/: 1v0.yaml  air_dribble.yaml  airial.yaml  airial_training.yaml  ball_hunt.yaml  base.yaml  boost_gather.yaml  default.yaml  half_flip.yaml  just_air_dribble.yaml  new_air_dribble.yaml  offense.yaml  shooting.yaml
conf/resources/: debug.yaml  standard.yaml
conf/scenarios/: all.yaml  ball_hunt.yaml  field_air_dribble.yaml  wall_air_dribble.yaml
cool_checkpoints/airial_and_boost_finding/: algorithm_state.pkl  class_and_ctor_args.pkl
cool_checkpoints/ball_hunt/: algorithm_state.pkl  class_and_ctor_args.pkl
cool_checkpoints/checkpoint_000183/: algorithm_state.pkl  class_and_ctor_args.pkl
cool_checkpoints/offense/: algorithm_state.pkl  class_and_ctor_args.pkl
env/: __init__.py  action_parser.py  denbot_obs.py  denbot_reward.py  encoders.py  env.py  env_bak.py  env_components.py  obs_builder.py  terminal_condition.py
env/action_parsers/: __init__.py  lookup_table_action.py  repeat_action.py  seer_action.py
env/curriculum/: curriculum.py  scenario.py  scoring_functions.py
env/obs_builders/: __init__.py  default_obs.py  encoders.py
env/observers/: denbot_obs.py  observer_1v1.py  observer_map.py
env/rewards_functions/: __init__.py  ball_heading_reward.py  ball_proximity.py  can_flip.py  facing_ball.py  speed2ball.py
env/sim_setters/: air_dribble.py  airial.py  ball_hunt.py  boost_gather.py  half_flip.py  rocket_sim_setter.py  shooting_drill.py
env/state_mutators/: air_dribble.py  airial.py  airial_curriculum.py  ball_hunt.py  boost_gather.py  half_flip.py  (+2 more)
nn/: denbot.py
rllib/: build_config.py
tests/: env_test.py  obs_test.py
training/: callbacks.py  stoppers.py
(+61 files in other folders)
